--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,14 @@ itsdangerous==2.1.2
 pymysql==1.1.0
 cryptography
 requests==2.31.0
-Flask-Limiter==3.5.0 
+Flask-Limiter==3.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.5
+Flask-Session==0.5.0
+Flask-Talisman==1.1.0
+PyJWT==2.8.0
+python-dateutil==2.8.2
+SQLAlchemy==2.0.23
+alembic==1.12.1
+gunicorn==21.2.0
+redis==5.0.1 
